@@ -29,3 +29,6 @@
 24 February 2006: [v1.2.5]
 	added install-all rule to Makefile. run ranlib after installation of
 	lib for ld on Darwin. turn off 'shared' rule on macosx.
+22 May 2006: [v1.2.6]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet; added
+	to TODO.  Clean up link to shared library.
